--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,16 +266,26 @@ section {
 }
 
 
-
-
 .contact-info {
     color: #fce138;
     font-size: 32px;
 }
 
+.contact-info h3{
+    padding-bottom: 32px;
+    color: #fce138;
+}
 
+.contact-info p, .contact-info address {
+    margin: 20px 0 ;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
 
-
+.contact-info address a:link {
+    color: #fce138;
+}
 
 
 
