--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,17 +55,18 @@ footer {
   background: #fce138;
   width: 100%;
   padding: 40px 35px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 30px;
   margin: 0;
 }
 
 footer div {
-  float: right;
   line-height: 1.5;
   text-align: right;
 }
@@ -90,22 +91,21 @@ section {
 
 .hero {
   background-image: url("../../images/hero-bg.jpg");
-  height: 600px;
   background-size: cover;
   background-position: center;
-  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .hero-form {
   color: #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
   border: 3px solid;
-  position: absolute;
-  bottom: 120px;
-  right: 140px;
-  position: absolute;
+  width: 40%;
+  margin: 3.3%;
 }
 
 .hero-form h3 {
@@ -119,6 +119,21 @@ section {
 
 .hero h1 {
   font-size: 60px;
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 /* Form Styles */
