--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,16 +64,17 @@ header nav ul li a {
 /* Footer Styles Begin Here */
 
 footer {
-  background: #fce138;
+  background: #024e76;
   width: 100%;
   padding: 40px 35px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  background-color: #024e76;
 }
 
 footer h2 {
-  color: #024e76;
+  color: #fce138;
   font-size: 30px;
   margin: 0;
 }
@@ -84,7 +85,7 @@ footer div {
 }
 
 footer a {
-  color: #024e76;
+  color: #39a6b2;
 }
 
 .displayinline {
@@ -304,22 +305,19 @@ section {
 }
 
 .contact-info iframe {
-  width: 400px;
   height: 400px;
 }
 
 .contact-info div {
-  width: 410px;
-  display: inline-block;
-  vertical-align: top;
-  text-align: left;
-  margin: 30px 0 0 60px;
   color: white;
 }
 
 .contact-info {
   color: #fce138;
   font-size: 32px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .contact-info h3 {
@@ -331,10 +329,43 @@ section {
 .contact-info address {
   margin: 20px 0;
   line-height: 1.5;
-  font-size: 20px;
+  font-size: 16px;
   font-style: normal;
 }
 
 .contact-info address a:link {
   color: #fce138;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
+
+.contact-form input,
+.contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px;
+  font-size: 16px;
+}
+
+.contact-form input,
+.contact-form textarea,
+.contact-form button {
+  border-radius: 5px;
 }
