--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,3 +370,17 @@ section {
 .contact-form button {
   border-radius: 5px;
 }
+
+/* media query for smaller desktop screens and smaller */
+
+@media screen and (max-width: 900px) {
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+
+@media screen and (max-width: 768px) {
+}
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+
+@media screen and (max-width: 575px) {
+}
