--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,14 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 header h1 {
@@ -36,6 +44,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -59,6 +68,14 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* Footer Styles Begin Here */
@@ -111,6 +128,8 @@ section {
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
 }
 
 .hero-form {
@@ -120,6 +139,9 @@ section {
   border: 3px solid;
   width: 40%;
   margin: 3.3%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: rgba(252, 225, 56, 0.8);
+  border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -148,6 +170,7 @@ section {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 /* Form Styles */
@@ -158,8 +181,15 @@ section {
   display: block;
   padding: 7px 15px;
   color: #024e76;
+  background-color: rgba(255, 255, 255, 0.75);
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
+}
+
+.form-input:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .hero-form label {
@@ -172,6 +202,11 @@ section {
   font-size: 16px;
   border: none;
   padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;
 }
 
 .intro p {
@@ -211,11 +246,15 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 3px solid #39a6b2;
+}
+
+.step:last-child {
+  border-bottom: none;
 }
 
 .step h3 {
@@ -353,6 +392,8 @@ section {
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .contact-form button {
@@ -363,6 +404,18 @@ section {
   text-align: center;
   padding: 15px;
   font-size: 16px;
+  border-radius: 10px;
+}
+
+.contact-form button:hover {
+  color: #fce138;
+  background: #39a6b2;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  background-color: rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .contact-form input,
@@ -371,12 +424,17 @@ section {
   border-radius: 5px;
 }
 
+/* BOX SHADOWS */
+
+/* MEDIA QUERIES START HERE */
+
 /* media query for smaller desktop screens and smaller */
 
 @media screen and (max-width: 980px) {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
