--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -43,7 +49,8 @@ header {
 header h1 {
   font-weight: bold;
   font-size: 36px;
-  color: #fce138;
+  /* color: #fce138; */
+  color: var(--primary-color)
   margin: 0;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
@@ -450,7 +457,7 @@ section {
   background: rgba(255, 255, 255, 0.75);
   border: 1px solid #024e76;
   position: absolute;
-  top: -4px;
+  top: -2px;
   left: -30px;
 }
 
@@ -466,7 +473,7 @@ section {
   background: #024e76;
   position: absolute;
   left: -29px;
-  top: -3px;
+  top: -1px;
   background-image: radial-gradient(circle, #39a6b2, #024e76);
 }
 
@@ -477,8 +484,8 @@ section {
   border-left: 2px solid #024e76;
   border-bottom: 2px solid #024e76;
   position: absolute;
-  left: -26px;
-  top: 1px;
+  left: -27px;
+  top: 3px;
   transform: rotate(-58deg);
 }
 
